--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -303,6 +303,52 @@ body #berita-himsi .text-berita #garis {
   border-radius: 10px;
 }
 
+body #berita-himsi .headline-news {
+  width: 100%;
+  height: 420px;
+  position: relative;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+body #berita-himsi .headline-news img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+body #berita-himsi .headline-news:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+body #berita-himsi .headline-news .headline-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  color: #eee;
+}
+
+body #berita-himsi .thumb-news {
+  width: 70px;
+  height: 70px;
+  overflow: hidden;
+}
+
+body #berita-himsi .thumb-news img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 body #berita-himsi .content-berita {
   width: 100%;
   margin-bottom: 40px;
