--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -377,7 +377,7 @@ body {
                 /*padding: 0px 40px 0px 40px;*/
                 size: 28px;
                 text-align: center;
-                padding: 20px 40px 20px 40px;
+                padding: 20px;
                 // vertical-align: middle;
 
                 span {
@@ -509,6 +509,71 @@ body {
                 background-color: $kuning;
                 border-radius: 5px; 
             }
+        }
+        .content-struktur-organisasi {
+            width: 100%;
+            margin-bottom: 40px;
+            margin-top: 20px;
+            height: auto;
+
+            #pills-tab {
+                // width: 100%;
+                // padding-right: 0px;
+                // margin-right: 0px;
+                display: flex;
+                justify-content: center;
+
+                .nav-item {
+                    margin-right: 5px;
+                    margin-bottom: 5px;
+                    .nav-link {
+                        color: grey;
+                        background-color: #eeeeee;
+                    }
+                    .nav-link.active {
+                        // border: 2px solid $kuning;
+                        background-color: $biru;
+                        color: white;
+                        font-weight: bold;
+                    }
+                } 
+            }
+
+            #pills-tabContent{
+                // margin: 0px auto;
+                .tab-pane.fade {
+                    // text-align: left;
+
+                    .row {
+                    margin-right: 0px;
+                    margin-left: 0px;
+                    padding: 30px;
+                    margin: 20px;
+
+                        img {
+                            width: 90%;
+                            height: auto;
+                            border-radius: 5px;
+                            display: block;
+                            margin: 0 auto;
+                            margin-bottom: 20px;
+                        }
+
+                        p {
+                            size: 26px;
+                            text-align: justify;
+                            padding: 10px;
+            
+                            span {
+                                font-weight: bold;
+                                color: $biru;
+                                border-bottom: 1px solid $kuning;
+                            }
+                        }
+                    }
+                }
+            }
+
         }
     }
 
