--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -19,6 +19,7 @@ body {
 }
 body nav {
   border-bottom: 0.5px solid #eee;
+  background-color: white;
 }
 body nav .navbar-brand img {
   width: auto;
@@ -67,7 +68,7 @@ body nav li.nav-item-button button.btn_kontak:hover span {
 body #hl {
   width: 100%;
   height: auto;
-  margin: 60px 0px 60px 0px;
+  margin: 120px 0px 60px 0px;
 }
 body #hl .img-hl {
   margin: 0px 50px 0px 50px;
@@ -75,6 +76,9 @@ body #hl .img-hl {
 body #hl .img-hl img {
   width: auto;
   height: 300px;
+}
+body #hl #text-hl {
+  margin-top: 30px;
 }
 body #hl #text-hl h1 {
   font-size: 48px;
@@ -248,7 +252,6 @@ body #berita-himsi .text-berita #garis {
   background-color: #ffbe00;
   border-radius: 5px;
 }
-
 body #berita-himsi .headline-news {
   width: 100%;
   height: 420px;
@@ -256,14 +259,11 @@ body #berita-himsi .headline-news {
   padding-left: 0;
   padding-right: 0;
 }
-
 body #berita-himsi .headline-news img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
-
 body #berita-himsi .headline-news:before {
   content: "";
   position: absolute;
@@ -271,9 +271,8 @@ body #berita-himsi .headline-news:before {
   height: 100%;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.4);
+  background: linear-gradient(to bottom, rgba(50, 50, 50, 0) 45%, rgba(16, 15, 15, 0.91) 89%, rgba(16, 15, 15, 0.93) 93%) !important;
 }
-
 body #berita-himsi .headline-news .headline-text {
   position: absolute;
   bottom: 0;
@@ -281,20 +280,16 @@ body #berita-himsi .headline-news .headline-text {
   width: 100%;
   color: #eee;
 }
-
 body #berita-himsi .thumb-news {
   width: 70px;
   height: 70px;
   overflow: hidden;
 }
-
 body #berita-himsi .thumb-news img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
-
 body #berita-himsi .content-berita {
   width: 100%;
   margin-bottom: 40px;
@@ -304,6 +299,7 @@ body #profil-himsi {
   width: 100%;
   height: auto;
   border-top: 0.5px solid #eeeeee;
+  margin-top: 80px;
 }
 body #profil-himsi .text-profil-himsi {
   text-align: center;
@@ -381,7 +377,7 @@ body #visi-misi-himsi .content-visi-misi-himsi {
   height: auto;
 }
 body #visi-misi-himsi .content-visi-misi-himsi img {
-  width: 100%;
+  width: 80%;
   height: auto;
   border-radius: 5px;
   padding: 20px;
