--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -19,6 +19,7 @@ body {
 
     nav {
         border-bottom: 0.5px solid #eee;
+        background-color: white;
 
         .navbar-brand {
             img {
@@ -85,7 +86,7 @@ body {
     #hl {
         width: 100%;
         height: auto;
-        margin: 60px 0px 60px 0px;
+        margin: 120px 0px 60px 0px;
 
         .img-hl {
 
@@ -98,12 +99,13 @@ body {
         }
 
         #text-hl {
+            margin-top: 30px;
             h1 {
                 // width: 450px;
                 font-size: 48px;
-                    color: $biru;
-                    font-weight: bold;
-                    letter-spacing: 2px;
+                color: $biru;
+                font-weight: bold;
+                letter-spacing: 2px;
                 // span {
                     
                 // }
@@ -335,7 +337,8 @@ body {
                 height: 100%;
                 top:0;
                 left: 0;
-                background-color: rgba(0, 0, 0, 0.4);
+                background: linear-gradient(to bottom,rgba(50,50,50,0) 45%,rgba(16,15,15,0.91) 89%,rgba(16,15,15,0.93) 93%)!important;
+                // background-color: rgba(0, 0, 0, 0.4);
             }
 
             .headline-text{
@@ -374,6 +377,7 @@ body {
         width: 100%;
         height: auto;
         border-top: 0.5px solid #eeeeee;
+        margin-top: 80px;
 
         .text-profil-himsi {
 
@@ -478,7 +482,7 @@ body {
             height: auto;
             
             img {
-                width: 100%;
+                width: 80%;
                 height: auto;
                 border-radius: 5px;
                 padding: 20px;
