--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -555,7 +555,7 @@ body {
         .content-struktur-organisasi {
             width: 100%;
             margin-bottom: 40px;
-            margin-top: 20px;
+            margin-top: 10px;
             height: auto;
 
             #pills-tab {
@@ -564,6 +564,7 @@ body {
                 // margin-right: 0px;
                 display: flex;
                 justify-content: center;
+                margin-bottom: 10px;
 
                 .nav-item {
                     margin-right: 5px;
@@ -584,13 +585,13 @@ body {
             #pills-tabContent{
                 // margin: 0px auto;
                 .tab-pane.fade {
-                    // text-align: left;
 
                     .row {
+                    border: 1px solid #eeeeee;
                     margin-right: 0px;
                     margin-left: 0px;
-                    padding: 30px;
-                    margin: 20px;
+                    padding: 20px;
+                    margin: 30px;
 
                         img {
                             width: 90%;
@@ -598,7 +599,6 @@ body {
                             border-radius: 5px;
                             display: block;
                             margin: 0 auto;
-                            margin-bottom: 20px;
                         }
 
                         p {
